Build/CI fixes, incl. code cov